// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YandexBank desktop className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcYandexBank YpcYandexBank_view_horizontal Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_yandex-bank YpcIcon_width_xl YpcIcon_height_s YpcYandexBank-Icon YpcYandexBank-Icon_view_horizontal"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Счёт в Яндексе
    </h4>
  </div>
</article>
`;

exports[`YandexBank desktop view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcYandexBank YpcYandexBank_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_yandex-bank YpcIcon_width_xl YpcIcon_height_s YpcYandexBank-Icon YpcYandexBank-Icon_view_horizontal"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Счёт в Яндексе
    </h4>
  </div>
</article>
`;

exports[`YandexBank desktop view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_vertical YpcYandexBank YpcYandexBank_view_vertical"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_yandex-bank YpcIcon_width_xl YpcIcon_height_s YpcYandexBank-Icon YpcYandexBank-Icon_view_vertical"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_vertical"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Счёт в Яндексе
    </h4>
  </div>
</article>
`;

exports[`YandexBank touch-phone className 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcYandexBank YpcYandexBank_view_horizontal Test"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_yandex-bank YpcIcon_width_xl YpcIcon_height_s YpcYandexBank-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Счёт в Яндексе
    </h4>
  </div>
</article>
`;

exports[`YandexBank touch-phone view horizontal 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcYandexBank YpcYandexBank_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_yandex-bank YpcIcon_width_xl YpcIcon_height_s YpcYandexBank-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Счёт в Яндексе
    </h4>
  </div>
</article>
`;

exports[`YandexBank touch-phone view vertical 1`] = `
<article
  className="YpcPaymentMethod YpcPaymentMethod_view_horizontal YpcYandexBank YpcYandexBank_view_horizontal"
>
  <i
    aria-hidden={true}
    className="YpcIcon YpcIcon_name_yandex-bank YpcIcon_width_xl YpcIcon_height_s YpcYandexBank-Icon"
  />
  <div
    className="YpcPaymentMethod-Content YpcPaymentMethod-Content_view_horizontal"
  >
    <h4
      className="YpcPaymentMethod-Name"
    >
      Счёт в Яндексе
    </h4>
  </div>
</article>
`;
